[package]
name = "p2p-zk-blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.53", features = [
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "mdns",
    "request-response",
    "identify",
    "kad",
    "macros",
    "tokio",
    "ping",
] }
tokio = { version = "1.41.5", features = ["full"] }
ark-ff = { version = "^0.5.0", default-features = false }
ark-ec = { version = "^0.5.0" }
ark-ed-on-bls12-381 = { version = "^0.5.0", features = ["r1cs"] }
ark-bls12-381 = { version = "^0.5.0" }
ark-std = { version = "^0.5.0"}
ark-relations = { version = "^0.5.0" }
ark-r1cs-std = { version = "^0.5.0", default-features = false }
ark-snark = { version = "^0.5.0"}
ark-poly = {version = "^0.5.0"}
ark-groth16 = {version = "^0.5.0" }
ark-serialize = { version = "^0.5.0", features=["derive"]}
ark-crypto-primitives = {version = "^0.5.0", features = ["crh", "r1cs"]}
sha256 = { version = "1.6.0"}
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }
